# paper-web

./: .bashrc  .gitignore  pyproject.toml  sample.pdf:com.dropbox.attrs
docker/: Dockerfile  Dockerfile_azurite  Dockerfile_react  docker-compose.yaml  init_azurite.js
documents/: ER.puml
env/: API.env  azurite.env  env.env
notebook/: jupytert.ipynb
paper-client/react-app/: package-lock.json  package.json  tsconfig.json
paper-client/react-app/src/: App.tsx
paper-client/react-app/src/colortheme/: CustomTabs.ts  theme.ts
paper-client/react-app/src/components/: Main.tsx  Main.txt  Search.tsx
paper-client/react-app/src/libs/: utils.tsx
paper-server/notebook/: filtered.csv  filtered.xlsx  jupytert.ipynb  pdf.ipynb  sorted.xlsx
paper-server/script/: add_sample_data.py  create_table.py  recreate-llmprompt.py  sample.py
paper-server/src/: app.py
paper-server/src/cloud/: azureStorageClient.py  test.py
paper-server/src/db/: db.py  model.py
paper-server/src/gui/template/: paper_detail.html  paper_list.html
paper-server/src/llmlib/: api.py  model.py  summalizer.py
paper-server/src/paper/get_citation/: 'MITRE_ATTACK_Framework'_'Detection'.csv  MITER_ATTACK_Framework.csv  get_paper_list_from_google_scholar.py  machine_learning.csv
paper-server/src/pdf/: extract.py
paper-server/src/util/: util_time.py
script/: create_table.py
src/: app.py
src/cloud/: cloudclient.py
src/db/: model.py
src/gui/: config.py
src/gui/resource/css/: common.css  font.css  (+3 more)
src/gui/template/: paper_detail.html  paper_list.html  table.html
src/llmlib/model/: model.py
(+33 files in other folders)
